specify logo width to avoid jumping during rendering

--- a/web-interface/src/index.css
+++ b/web-interface/src/index.css
@@ -36,6 +36,7 @@ div.overview-statistic span {
 
 .navbar img.logo {
     height: 30px;
+    width: 25.5px;
     margin-right: 15px;
 }
 
